public/css/top.css
/* TOP SECTION STYLING */
#formatting-options {
    margin-top: 0.5rem;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
    background-color: rgb(235, 235, 235);
    border-radius: 0.25rem;
    padding: 0.5rem;
    min-width: 35%;
}

#formatting-options span {
    display: flex;
    gap: 0.25rem;
    align-items: center;
    margin-bottom: 0.5rem;
}

#formatting-options h3 {
    font-family: "Open Sans", sans-serif;
    font-weight: 600;
    font-size: 1rem;
    margin-top: 0.5rem;
    width: 100%;
    border-bottom: 1px solid #000000;
}

#buttons {
    margin-top: 1rem;
}

#buttons #print-button {
    font-size: 2rem;
    color: rgb(133, 133, 133);
    background-color: transparent;
    transition: color 250ms;
    cursor: pointer;
}

#buttons #print-button:hover {
    color: #000000;
}

#print-settings {
    display: flex;
    align-items: flex-start;
    justify-content: flex-start;
    gap: 2rem;
    margin: 0 1rem;
}

#print-settings label {
    font-family: "Open Sans", sans-serif;
    font-weight: 400;
    font-size: 0.75rem;
}

#print-options {
    padding: 0.5rem;
    margin-top: 0.5rem;
}

#print-options h3 {
    font-family: "Open Sans", sans-serif;
    font-weight: 600;
    font-size: 1rem;
    margin-top: 0.5rem;
    width: 100%;
    border-bottom: 1px solid #000000;
}

#list-checkboxes,
#detail-checkboxes {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 0.5rem;
    flex-wrap: wrap;
}

#list-checkboxes span,
#detail-checkboxes span {
    display: flex;
    gap: 0.25rem;
    align-items: center;
    background-color: #eeeeee;
    padding: 0.25rem 0.5rem 0.25rem 0.25rem;
    border-radius: 500px;
    transition: background-color 250ms;
}

#list-checkboxes span:hover,
#detail-checkboxes span:hover {
    background-color: #aaaaaa;
}

input[type=checkbox] {
    margin: 0;
}

button#all-none-lists,
button#all-none-details {
    background: transparent;
    padding: 0;
    margin: 0;
}

